# neighborjoining

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  neighborjoining-linux  test.md
examples/: crab.fa  dist_matrix_UPGMA  dist_matrix_animal.txt  dist_matrix_species.txt  dist_matrix_wiki.txt  fasta_example_1.fa  fasta_nine_species.fa  fasta_simple.fa  fasta_ten_example.fa  genbank_2.fa  sites_list.md  three_seq.fa
src/: binary_tree.c  binary_tree.h  clusters_matrix.c  clusters_matrix.h  cmdline.c  cmdline.ggo  cmdline.h  fasta_parser.c  fasta_parser.h  neighborjoining.c
